change html page

--- a/menu.html
+++ b/menu.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
-    <title>Phuc Long Style Replica</title>
+    <title>Nhiet Doi Coffee & Tea</title>
     <link href="https://fonts.googleapis.com/css2?family=Arimo:wght@400;500;700&display=swap" rel="stylesheet">
     <script src="script.js" defer></script>
     <style>
