change html page

--- a/menu.html
+++ b/menu.html
@@ -752,7 +752,7 @@
         <section id="about" class="about">
             <h1>About Us</h1>
             <p>Nhiet Doi is dedicated to preserving the rich heritage of Vietnamese tea and coffee. Our journey began with a passion for authentic flavors and a commitment to quality.</p>
-            <img src="https://images.unsplash.com/photo-1513519245088-0e12902e5a38?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="About Nhiet Doi">
+            <img src="phattai.png" alt="About Nhiet Doi">
             <p>From sourcing the finest ingredients to crafting each product with care, we aim to bring the essence of tradition to every cup. Join us in celebrating the art of tea and coffee.</p>
         </section>
 
