change img size

--- a/menu.html
+++ b/menu.html
@@ -355,6 +355,7 @@
             font-size: 20px;
             color: rgb(0, 111, 60);
             margin: 10px 0;
+            padding-inline: 10px;
         }
 
         .menu-card p {
