change img, text content

--- a/menu.html
+++ b/menu.html
@@ -879,7 +879,7 @@
                         </div>
                     </div>
                     <div class="menu-card">
-                        <img src="logo.png"
+                        <img src="https://i.ibb.co/ns9sYdr1/Chat-GPT-Image-May-5-2025-01-18-35-PM.png"
                              onerror="this.src='logo.png'"
                              alt="Blueberry Tea">
                         <h3>Trà việt quất</h3>
