change img, text content

--- a/menu.html
+++ b/menu.html
@@ -160,7 +160,7 @@
         /* Hero Section */
         .hero {
             height: 100vh;
-            background-image: url('https://images.unsplash.com/photo-1512568400610-62da28bc8a13?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&h=1080&q=80');
+            background-image: url('banner.jpg');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -737,7 +737,7 @@
                 <p>Khám phá các loại trà và cà phê cao cấp lấy cảm hứng từ truyền thống.</p>
                 <div class="product-grid">
                     <div class="product-card">
-                        <img src="https://images.unsplash.com/photo-1576092768241-dec231879fc3?ixlib=rb-4.0.3&auto=format&fit=crop&w=250&h=200&q=80"
+                        <img src="tea.jpg"
                              onerror="this.src = 'placeholder.png'"
                              alt="Premium Tea">
                         <h3>Lá trà nguyên chất</h3>
@@ -771,7 +771,7 @@
                 <h2>Coffee</h2>
                 <div class="menu-grid">
                     <div class="menu-card">
-                        <img src="https://i.pinimg.com/736x/a9/5d/a6/a95da6bbccbb8d81b7c00069255be1c0.jpg"
+                        <img src="capheden.jpg"
                              onerror="this.src='logo.png'"
                              alt="Vietnamese Iced Coffee">
                         <h3>Caphe Đen</h3>
@@ -788,7 +788,7 @@
                         </div>
                     </div>
                     <div class="menu-card">
-                        <img src="https://i.pinimg.com/736x/54/fa/52/54fa529309537816c78ba39d8e7e8eaf.jpg"
+                        <img src="caphesua.jpg"
                              onerror="this.src='logo.png'"
                              alt="Vietnamese Iced Coffee">
                         <h3>Caphe sữa</h3>
@@ -805,7 +805,7 @@
                         </div>
                     </div>
                     <div class="menu-card">
-                        <img src="https://i.postimg.cc/mDdcYdMV/722b8aa8cc44e516a4b87eda49c685fe-Photoroom.jpg"
+                        <img src="caphemuoi.png"
                              onerror="this.src='logo.png'"
                              alt="Vietnamese Salted Coffee">
                         <h3>Caphe muối</h3>
@@ -879,7 +879,7 @@
                         </div>
                     </div>
                     <div class="menu-card">
-                        <img src="https://i.ibb.co/ns9sYdr1/Chat-GPT-Image-May-5-2025-01-18-35-PM.png"
+                        <img src="travietquat.png"
                              onerror="this.src='logo.png'"
                              alt="Blueberry Tea">
                         <h3>Trà việt quất</h3>
