change img, text content

--- a/menu.html
+++ b/menu.html
@@ -761,7 +761,7 @@
         <section id="about" class="about">
             <h1>Về Chúng Tôi</h1>
             <p><p>Nhiệt Đới cam kết bảo tồn di sản phong phú của trà và cà phê Việt Nam. Hành trình của chúng tôi bắt đầu với niềm đam mê hương vị truyền thống và sự cam kết về chất lượng.</p></p>
-<!--            <img src="phattai.png" alt="About Nhiet Doi">-->
+            <img src="phattai.png" alt="About Nhiet Doi">
             <p>Từ việc chọn lọc những nguyên liệu tốt nhất đến việc chế biến từng sản phẩm một cách tỉ mỉ, chúng tôi mong muốn mang đến tinh hoa truyền thống trong từng tách trà và cà phê. Hãy cùng chúng tôi tôn vinh nghệ thuật trà và cà phê.</p>
         </section>
 
