--- a/menu.html
+++ b/menu.html
@@ -883,7 +883,7 @@
                              onerror="this.src='logo.png'"
                              alt="Blueberry Tea">
                         <h3>Trà việt quất</h3>
-                        <p>Việt quốc, trà, thơm, ngọt dịu</p>
+                        <p>Việt quất, trà, thơm, ngọt dịu</p>
                         <div class="size-prices">
                             <div class="size-price">
                                 <span class="size">M</span>
@@ -908,7 +908,7 @@
                             </div>
                             <div class="size-price">
                                 <span class="size">L</span>
-                                <span class="price">30</span>
+                                <span class="price">33</span>
                             </div>
                         </div>
                     </div>
@@ -926,7 +926,7 @@
                         <p>Nước cam ép tươi mát</p>
                         <div class="size-prices-middle">
                             <div class="size-price">
-                                <span class="size">L</span>
+                                
                                 <span class="price">25</span>
                             </div>
                         </div>
@@ -939,7 +939,7 @@
                         <p>Nước dừa tươi nguyên chất</p>
                         <div class="size-prices-middle">
                             <div class="size-price">
-                                <span class="size">L</span>
+                                
                                 <span class="price">25</span>
                             </div>
                         </div>
