--- a/menu.html
+++ b/menu.html
@@ -896,6 +896,23 @@
                         </div>
                     </div>
                     <div class="menu-card">
+                        <img src="tralaidacthom.png"
+                             onerror="this.src='logo.png'"
+                             alt="Blueberry Tea">
+                        <h3>Trà Lài Đác Thơm</h3>
+                        <p>Thơm, hạt đác, trà lài</p>
+                        <div class="size-prices">
+                            <div class="size-price">
+                                <span class="size">M</span>
+                                <span class="price">28</span>
+                            </div>
+                            <div class="size-price">
+                                <span class="size">L</span>
+                                <span class="price">33</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu-card">
                         <img src="https://png.pngtree.com/png-clipart/20250415/original/pngtree-iced-matcha-latte-with-smooth-layering-png-image_20696564.png"
                              onerror="this.src='logo.png'"
                              alt="Matcha Latte">
