--- a/menu.html
+++ b/menu.html
@@ -905,6 +905,23 @@
                             </div>
                         </div>
                     </div>
+                    <div class="menu-card">
+                        <img src="cacaolatte.png"
+                             onerror="this.src='logo.png'"
+                             alt="Cacao latte">
+                        <h3>Cacao latte</h3>
+                        <p>Cacao nguyên chất, sữa tươi.</p>
+                        <div class="size-prices">
+                            <div class="size-price">
+                                <span class="size">M</span>
+                                <span class="price">22</span>
+                            </div>
+                            <div class="size-price">
+                                <span class="size">L</span>
+                                <span class="price">25</span>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <!-- Tea Category -->
