--- a/menu.html
+++ b/menu.html
@@ -1014,7 +1014,7 @@
                         </div>
                     </div>
                     <div class="menu-card">
-                        <img src="tralaidacthom.png"
+                        <img src="tralaidacthom1.png"
                              onerror="this.src='logo.png'"
                              alt="Blueberry Tea">
                         <h3>Trà Lài Đác Thơm</h3>
