--- a/menu.html
+++ b/menu.html
@@ -855,7 +855,7 @@
                         </div>
                     </div>
                     <div class="menu-card">
-                        <img src="caphesua.png"
+                        <img src="cafesualast.png"
                              onerror="this.src='logo.png'"
                              alt="Vietnamese Iced Coffee">
                         <h3>Caphe sữa</h3>
@@ -946,7 +946,7 @@
                 <h2>Tea</h2>
                 <div class="menu-grid">
                     <div class="menu-card">
-                        <img src="https://png.pngtree.com/png-clipart/20250116/original/pngtree-refreshing-peach-iced-tea-with-fresh-mint-leaves-png-image_20187696.png"
+                        <img src="tradao.png"
                              onerror="this.src='logo.png'"
                              alt="Peach Tea">
                         <h3>Trà đào</h3>
@@ -963,11 +963,28 @@
                         </div>
                     </div>
                     <div class="menu-card">
-                        <img src="https://dailong.asia/page/download/tra-vai-png-lychee-tea-kMofv2.png"
+                        <img src="travai.png"
                              onerror="this.src='logo.png'"
                              alt="Lychee tea">
                         <h3>Trà vải</h3>
                         <p>Trà, vải tươi, tươi mát, ngọt dịu</p>
+                        <div class="size-prices">
+                            <div class="size-price">
+                                <span class="size">M</span>
+                                <span class="price">28</span>
+                            </div>
+                            <div class="size-price">
+                                <span class="size">L</span>
+                                <span class="price">33</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu-card">
+                        <img src="travietquat1.png"
+                             onerror="this.src='logo.png'"
+                             alt="Blueberry Tea">
+                        <h3>Trà việt quất</h3>
+                        <p>Việt quất, trà, thơm, ngọt dịu</p>
                         <div class="size-prices">
                             <div class="size-price">
                                 <span class="size">M</span>
@@ -985,23 +1002,6 @@
                              alt="Guava Tea">
                         <h3>Trà ổi hồng</h3>
                         <p>Ổi hồng, trà, thanh mát, ngọt dịu</p>
-                        <div class="size-prices">
-                            <div class="size-price">
-                                <span class="size">M</span>
-                                <span class="price">28</span>
-                            </div>
-                            <div class="size-price">
-                                <span class="size">L</span>
-                                <span class="price">33</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="menu-card">
-                        <img src="travietquat.png"
-                             onerror="this.src='logo.png'"
-                             alt="Blueberry Tea">
-                        <h3>Trà việt quất</h3>
-                        <p>Việt quất, trà, thơm, ngọt dịu</p>
                         <div class="size-prices">
                             <div class="size-price">
                                 <span class="size">M</span>
@@ -1054,7 +1054,7 @@
                 <h2>Juice</h2>
                 <div class="menu-grid">
                     <div class="menu-card">
-                        <img src="cam.png"
+                        <img src="nuoccam.png"
                              onerror="this.src='logo.png'"
                              alt="Fresh Orange Juice">
                         <h3>Cam ép</h3>
@@ -1067,7 +1067,7 @@
                         </div>
                     </div>
                     <div class="menu-card">
-                        <img src="https://png.pngtree.com/png-clipart/20241005/original/pngtree-fresh-coconut-juice-with-coconut-water-splash-and-leaves-png-image_16203679.png"
+                        <img src="nuocdua.jpg"
                              onerror="this.src='logo.png'"
                              alt="Fresh Coconut Juice">
                         <h3>Dừa tươi</h3>
