--- a/menu.html
+++ b/menu.html
@@ -838,7 +838,7 @@
                 <h2>Coffee</h2>
                 <div class="menu-grid">
                     <div class="menu-card">
-                        <img src="capheden.png"
+                        <img src="cafeden.png"
                              onerror="this.src='logo.png'"
                              alt="Vietnamese Iced Coffee">
                         <h3>Caphe Đen</h3>
@@ -855,7 +855,7 @@
                         </div>
                     </div>
                     <div class="menu-card">
-                        <img src="cafesualast.png"
+                        <img src="cafesua.png"
                              onerror="this.src='logo.png'"
                              alt="Vietnamese Iced Coffee">
                         <h3>Caphe sữa</h3>
@@ -872,7 +872,7 @@
                         </div>
                     </div>
                     <div class="menu-card">
-                        <img src="caphesuatuoi.jpg"
+                        <img src="cafelatte.png"
                              onerror="this.src='logo.png'"
                              alt="Vietnamese Iced Coffee">
                         <h3>Caphe latte</h3>
@@ -906,7 +906,7 @@
                         </div>
                     </div>
                     <div class="menu-card">
-                        <img src="cacaosuada.png"
+                        <img src="cacaosua.png"
                              onerror="this.src='logo.png'"
                              alt="Cacao milk shake">
                         <h3>Cacao sữa đá</h3>
@@ -936,6 +936,23 @@
                             <div class="size-price">
                                 <span class="size">L</span>
                                 <span class="price">25</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu-card">
+                        <img src="cacaosua.png"
+                             onerror="this.src='logo.png'"
+                             alt="Cacao milk shake">
+                        <h3>Cacao sữa đá</h3>
+                        <p>Cacao nguyên chất, sữa đặc.</p>
+                        <div class="size-prices">
+                            <div class="size-price">
+                                <span class="size">M</span>
+                                <span class="price">19</span>
+                            </div>
+                            <div class="size-price">
+                                <span class="size">L</span>
+                                <span class="price">22</span>
                             </div>
                         </div>
                     </div>
@@ -980,7 +997,7 @@
                         </div>
                     </div>
                     <div class="menu-card">
-                        <img src="travietquat1.png"
+                        <img src="travietquat.png"
                              onerror="this.src='logo.png'"
                              alt="Blueberry Tea">
                         <h3>Trà việt quất</h3>
@@ -1014,7 +1031,7 @@
                         </div>
                     </div>
                     <div class="menu-card">
-                        <img src="tralaidacthom1.png"
+                        <img src="tralaidacthom.png"
                              onerror="this.src='logo.png'"
                              alt="Blueberry Tea">
                         <h3>Trà Lài Đác Thơm</h3>
@@ -1075,6 +1092,44 @@
                         <div class="size-prices-middle">
                             <div class="size-price">
                                 
+                                <span class="price">25</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu-card">
+                        <img src="nuocdua.jpg"
+                             onerror="this.src='logo.png'"
+                             alt="Fresh Coconut Juice">
+                        <h3>Dừa tươi</h3>
+                        <p>Nước dừa tươi nguyên chất</p>
+                        <div class="size-prices-middle">
+                            <div class="size-price">
+
+                                <span class="price">25</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu-card">
+                        <img src="nuocdua.jpg"
+                             onerror="this.src='logo.png'"
+                             alt="Fresh Coconut Juice">
+                        <h3>Dừa tươi</h3>
+                        <p>Nước dừa tươi nguyên chất</p>
+                        <div class="size-prices-middle">
+                            <div class="size-price">
+
+                                <span class="price">25</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu-card">
+                        <img src="nuocdua.jpg"
+                             onerror="this.src='logo.png'"
+                             alt="Fresh Coconut Juice">
+                        <h3>Dừa tươi</h3>
+                        <p>Nước dừa tươi nguyên chất</p>
+                        <div class="size-prices-middle">
+                            <div class="size-price">
                                 <span class="price">25</span>
                             </div>
                         </div>
