--- a/menu.html
+++ b/menu.html
@@ -906,11 +906,11 @@
                         </div>
                     </div>
                     <div class="menu-card">
-                        <img src="cacaosua.png"
+                        <img src="bacxiu.png"
                              onerror="this.src='logo.png'"
-                             alt="Cacao milk shake">
-                        <h3>Cacao sữa đá</h3>
-                        <p>Cacao nguyên chất, sữa đặc.</p>
+                             alt="Bac xiu">
+                        <h3>Bạc xỉu</h3>
+                        <p>1 shot espresso cùng với sữa tươi nguyên chất và sữa đặc.</p>
                         <div class="size-prices">
                             <div class="size-price">
                                 <span class="size">M</span>
@@ -1097,40 +1097,38 @@
                         </div>
                     </div>
                     <div class="menu-card">
-                        <img src="nuocdua.jpg"
+                        <img src="nuocduahatdac.png"
                              onerror="this.src='logo.png'"
                              alt="Fresh Coconut Juice">
-                        <h3>Dừa tươi</h3>
-                        <p>Nước dừa tươi nguyên chất</p>
+                        <h3>Nước dừa hạt đác</h3>
+                        <p>Nước dừa tươi nguyên chất và hạt đác</p>
                         <div class="size-prices-middle">
                             <div class="size-price">
-
-                                <span class="price">25</span>
+                                <span class="price">30</span>
                             </div>
                         </div>
                     </div>
                     <div class="menu-card">
-                        <img src="nuocdua.jpg"
+                        <img src="nuocduathotnot.png"
                              onerror="this.src='logo.png'"
                              alt="Fresh Coconut Juice">
-                        <h3>Dừa tươi</h3>
-                        <p>Nước dừa tươi nguyên chất</p>
+                        <h3>Nước dừa thốt nốt</h3>
+                        <p>Nước dừa tươi nguyên chất và thốt nốt</p>
                         <div class="size-prices-middle">
                             <div class="size-price">
-
-                                <span class="price">25</span>
+                                <span class="price">30</span>
                             </div>
                         </div>
                     </div>
                     <div class="menu-card">
-                        <img src="nuocdua.jpg"
+                        <img src="nuocduacunang.png"
                              onerror="this.src='logo.png'"
                              alt="Fresh Coconut Juice">
-                        <h3>Dừa tươi</h3>
-                        <p>Nước dừa tươi nguyên chất</p>
+                        <h3>Nước dừa hạt nổ củ năng</h3>
+                        <p>Nước dừa tươi nguyên chất và hạt nổ củ năng</p>
                         <div class="size-prices-middle">
                             <div class="size-price">
-                                <span class="price">25</span>
+                                <span class="price">30</span>
                             </div>
                         </div>
                     </div>
