- add tab event - add topseller icon

--- a/menu.html
+++ b/menu.html
@@ -375,7 +375,7 @@
         }
 
         .category-section h2 {
-            font-size: 28px;
+            font-size: 50px;
             color: rgb(0, 111, 60);
             margin-bottom: 20px;
             text-align: center;
@@ -831,6 +831,8 @@
             .menu-card img {
                 height: 250px;
                 background-color: white;
+
+                object-fit: scale-down;
             }
 
             .menu-card h3 {
