- add tab event - add topseller icon

--- a/menu.html
+++ b/menu.html
@@ -1116,7 +1116,7 @@
                     </div>
                     <div class="menu-card">
                         <span class="top-seller-icon">★</span>
-                        <img src="cacaosua.png"
+                        <img src="cacaosuada.png"
                              onerror="this.src='logo.png'"
                              alt="Cacao milk shake">
                         <h3>Cacao sữa đá</h3>
