--- a/menu.html
+++ b/menu.html
@@ -1109,6 +1109,7 @@
                         </div>
                     </div>
                     <div class="menu-card">
+                        <span class="top-seller-icon">★</span>
                         <img src="cafemuoi.png"
                              onerror="this.src='logo.png'"
                              alt="Vietnamese Salted Coffee">
@@ -1161,7 +1162,6 @@
                         </div>
                     </div>
                     <div class="menu-card">
-                        <span class="top-seller-icon">★</span>
                         <img src="cacaosuada.png"
                              onerror="this.src='logo.png'"
                              alt="Cacao milk shake">
@@ -1175,6 +1175,23 @@
                             <div class="size-price">
                                 <span class="size">L</span>
                                 <span class="price">22</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu-card">
+                        <img src="latte-hazenut.jpg"
+                             onerror="this.src='logo.png'"
+                             alt="latte hazenut">
+                        <h3>Phindi hạnh nhân</h3>
+                        <p>Coffee, sữa tươi, thạch coffee cùng với hạnh nhân.</p>
+                        <div class="size-prices">
+                            <div class="size-price">
+                                <span class="size">M</span>
+                                <span class="price">25</span>
+                            </div>
+                            <div class="size-price">
+                                <span class="size">L</span>
+                                <span class="price">33</span>
                             </div>
                         </div>
                     </div>
@@ -1321,7 +1338,6 @@
                         </div>
                     </div>
                     <div class="menu-card">
-                        <span class="top-seller-icon">★</span>
                         <img src="nuocduahatdac.png"
                              onerror="this.src='logo.png'"
                              alt="Fresh Coconut Juice">
@@ -1334,7 +1350,6 @@
                         </div>
                     </div>
                     <div class="menu-card">
-                        <span class="top-seller-icon">★</span>
                         <img src="nuocduathotnot.png"
                              onerror="this.src='logo.png'"
                              alt="Fresh Coconut Juice">
